hw1/miplParser.java
// Generated from mipl.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class miplParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, WSPACE=43, IDENT=44, INTCONST=45, 
		CHARCONST=46, COMMENT=47;
	public static final int
		RULE_prog = 0, RULE_proglbl = 1, RULE_block = 2, RULE_vardecpart = 3, 
		RULE_vardeclist = 4, RULE_vardec = 5, RULE_ident = 6, RULE_identlist = 7, 
		RULE_typez = 8, RULE_array = 9, RULE_idx = 10, RULE_idxrange = 11, RULE_simple = 12, 
		RULE_procdecpart = 13, RULE_procdec = 14, RULE_prochdr = 15, RULE_stmtpart = 16, 
		RULE_compound = 17, RULE_stmtlist = 18, RULE_stmt = 19, RULE_assign = 20, 
		RULE_procstmt = 21, RULE_procident = 22, RULE_read = 23, RULE_inputlist = 24, 
		RULE_inputvar = 25, RULE_write = 26, RULE_outputlist = 27, RULE_output = 28, 
		RULE_condition = 29, RULE_whileloop = 30, RULE_expr = 31, RULE_simpleexpr = 32, 
		RULE_addoplist = 33, RULE_term = 34, RULE_multoplist = 35, RULE_factor = 36, 
		RULE_sign = 37, RULE_addop = 38, RULE_multop = 39, RULE_relop = 40, RULE_variable = 41, 
		RULE_idxvar = 42, RULE_arrayvar = 43, RULE_entirevar = 44, RULE_varident = 45, 
		RULE_constant = 46, RULE_intconst = 47, RULE_boolconst = 48;
	public static final String[] ruleNames = {
		"prog", "proglbl", "block", "vardecpart", "vardeclist", "vardec", "ident", 
		"identlist", "typez", "array", "idx", "idxrange", "simple", "procdecpart", 
		"procdec", "prochdr", "stmtpart", "compound", "stmtlist", "stmt", "assign", 
		"procstmt", "procident", "read", "inputlist", "inputvar", "write", "outputlist", 
		"output", "condition", "whileloop", "expr", "simpleexpr", "addoplist", 
		"term", "multoplist", "factor", "sign", "addop", "multop", "relop", "variable", 
		"idxvar", "arrayvar", "entirevar", "varident", "constant", "intconst", 
		"boolconst"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "';'", "'.'", "'program'", "'var'", "':'", "','", "'array'", "'['", 
		"']'", "'of'", "'..'", "'integer'", "'char'", "'boolean'", "'procedure'", 
		"'begin'", "'end'", "':='", "'read'", "'('", "')'", "'write'", "'if'", 
		"'then'", "'else'", "'while'", "'do'", "'not'", "'+'", "'-'", "'or'", 
		"'*'", "'div'", "'and'", "'<'", "'<='", "'<>'", "'='", "'>'", "'>='", 
		"'true'", "'false'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, "WSPACE", "IDENT", "INTCONST", 
		"CHARCONST", "COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "mipl.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public miplParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext {
		public ProglblContext proglbl() {
			return getRuleContext(ProglblContext.class,0);
		}
		public TerminalNode IDENT() { return getToken(miplParser.IDENT, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miplListener ) ((miplListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miplListener ) ((miplListener)listener).exitProg(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			proglbl();
			setState(99);
			match(IDENT);
			setState(100);
			match(T__0);
			setState(101);
			block();
			setState(102);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProglblContext extends ParserRuleContext {
		public ProglblContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_proglbl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miplListener ) ((miplListener)listener).enterProglbl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miplListener ) ((miplListener)listener).exitProglbl(this);
		}
	}

	public final ProglblContext proglbl() throws RecognitionException {
		ProglblContext _localctx = new ProglblContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_proglbl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(T__2);
			print("hello")
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public VardecpartContext vardecpart() {
			return getRuleContext(VardecpartContext.class,0);
		}
		public ProcdecpartContext procdecpart() {
			return getRuleContext(ProcdecpartContext.class,0);
		}
		public StmtpartContext stmtpart() {
			return getRuleContext(StmtpartContext.class,0);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miplListener ) ((miplListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miplListener ) ((miplListener)listener).exitBlock(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_block);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			vardecpart();
			setState(108);
			procdecpart();
			setState(109);
			stmtpart();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VardecpartContext extends ParserRuleContext {
		public VardecContext vardec() {
			return getRuleContext(VardecContext.class,0);
		}
		public VardeclistContext vardeclist() {
			return getRuleContext(VardeclistContext.class,0);
		}
		public VardecpartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vardecpart; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miplListener ) ((miplListener)listener).enterVardecpart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miplListener ) ((miplListener)listener).exitVardecpart(this);
		}
	}

	public final VardecpartContext vardecpart() throws RecognitionException {
		VardecpartContext _localctx = new VardecpartContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_vardecpart);
		try {
			setState(117);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__14:
			case T__15:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 2);
				{
				setState(112);
				match(T__3);
				setState(113);
				vardec();
				setState(114);
				match(T__0);
				setState(115);
				vardeclist();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VardeclistContext extends ParserRuleContext {
		public VardecContext vardec() {
			return getRuleContext(VardecContext.class,0);
		}
		public VardeclistContext vardeclist() {
			return getRuleContext(VardeclistContext.class,0);
		}
		public VardeclistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vardeclist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miplListener ) ((miplListener)listener).enterVardeclist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miplListener ) ((miplListener)listener).exitVardeclist(this);
		}
	}

	public final VardeclistContext vardeclist() throws RecognitionException {
		VardeclistContext _localctx = new VardeclistContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_vardeclist);
		try {
			setState(124);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IDENT:
				enterOuterAlt(_localctx, 1);
				{
				setState(119);
				vardec();
				setState(120);
				match(T__0);
				setState(121);
				vardeclist();
				}
				break;
			case T__14:
			case T__15:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VardecContext extends ParserRuleContext {
		public IdentContext ident() {
			return getRuleContext(IdentContext.class,0);
		}
		public IdentlistContext identlist() {
			return getRuleContext(IdentlistContext.class,0);
		}
		public TypezContext typez() {
			return getRuleContext(TypezContext.class,0);
		}
		public VardecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vardec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miplListener ) ((miplListener)listener).enterVardec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miplListener ) ((miplListener)listener).exitVardec(this);
		}
	}

	public final VardecContext vardec() throws RecognitionException {
		VardecContext _localctx = new VardecContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_vardec);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			ident();
			setState(127);
			identlist();
			setState(128);
			match(T__4);
			setState(129);
			typez();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdentContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(miplParser.IDENT, 0); }
		public IdentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ident; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miplListener ) ((miplListener)listener).enterIdent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miplListener ) ((miplListener)listener).exitIdent(this);
		}
	}

	public final IdentContext ident() throws RecognitionException {
		IdentContext _localctx = new IdentContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_ident);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			match(IDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdentlistContext extends ParserRuleContext {
		public IdentContext ident() {
			return getRuleContext(IdentContext.class,0);
		}
		public IdentlistContext identlist() {
			return getRuleContext(IdentlistContext.class,0);
		}
		public IdentlistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identlist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miplListener ) ((miplListener)listener).enterIdentlist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miplListener ) ((miplListener)listener).exitIdentlist(this);
		}
	}

	public final IdentlistContext identlist() throws RecognitionException {
		IdentlistContext _localctx = new IdentlistContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_identlist);
		try {
			setState(138);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__5:
				enterOuterAlt(_localctx, 1);
				{
				setState(133);
				match(T__5);
				setState(134);
				ident();
				setState(135);
				identlist();
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypezContext extends ParserRuleContext {
		public SimpleContext simple() {
			return getRuleContext(SimpleContext.class,0);
		}
		public ArrayContext array() {
			return getRuleContext(ArrayContext.class,0);
		}
		public TypezContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typez; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miplListener ) ((miplListener)listener).enterTypez(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miplListener ) ((miplListener)listener).exitTypez(this);
		}
	}

	public final TypezContext typez() throws RecognitionException {
		TypezContext _localctx = new TypezContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_typez);
		try {
			setState(142);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__11:
			case T__12:
			case T__13:
				enterOuterAlt(_localctx, 1);
				{
				setState(140);
				simple();
				}
				break;
			case T__6:
				enterOuterAlt(_localctx, 2);
				{
				setState(141);
				array();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrayContext extends ParserRuleContext {
		public IdxrangeContext idxrange() {
			return getRuleContext(IdxrangeContext.class,0);
		}
		public SimpleContext simple() {
			return getRuleContext(SimpleContext.class,0);
		}
		public ArrayContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_array; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miplListener ) ((miplListener)listener).enterArray(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miplListener ) ((miplListener)listener).exitArray(this);
		}
	}

	public final ArrayContext array() throws RecognitionException {
		ArrayContext _localctx = new ArrayContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_array);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			match(T__6);
			setState(145);
			match(T__7);
			setState(146);
			idxrange();
			setState(147);
			match(T__8);
			setState(148);
			match(T__9);
			setState(149);
			simple();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdxContext extends ParserRuleContext {
		public IntconstContext intconst() {
			return getRuleContext(IntconstContext.class,0);
		}
		public IdxContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_idx; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miplListener ) ((miplListener)listener).enterIdx(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miplListener ) ((miplListener)listener).exitIdx(this);
		}
	}

	public final IdxContext idx() throws RecognitionException {
		IdxContext _localctx = new IdxContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_idx);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(151);
			intconst();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdxrangeContext extends ParserRuleContext {
		public List<IdxContext> idx() {
			return getRuleContexts(IdxContext.class);
		}
		public IdxContext idx(int i) {
			return getRuleContext(IdxContext.class,i);
		}
		public IdxrangeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_idxrange; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miplListener ) ((miplListener)listener).enterIdxrange(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miplListener ) ((miplListener)listener).exitIdxrange(this);
		}
	}

	public final IdxrangeContext idxrange() throws RecognitionException {
		IdxrangeContext _localctx = new IdxrangeContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_idxrange);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(153);
			idx();
			setState(154);
			match(T__10);
			setState(155);
			idx();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SimpleContext extends ParserRuleContext {
		public SimpleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simple; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miplListener ) ((miplListener)listener).enterSimple(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miplListener ) ((miplListener)listener).exitSimple(this);
		}
	}

	public final SimpleContext simple() throws RecognitionException {
		SimpleContext _localctx = new SimpleContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_simple);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(157);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__11) | (1L << T__12) | (1L << T__13))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
